--- a/Project.ipynb
+++ b/Project.ipynb
@@ -2460,13 +2460,56 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7bcb64e7-3763-469e-b333-c9dc37113a18",
+   "metadata": {},
+   "source": [
+    "### GBTClassifier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eeab7880-4469-4acd-b8a0-4e73f647c56a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gbt = GBTClassifier(maxIter=50, maxDepth=20, labelCol='label'\n",
+    "    , featuresCol=\"features\", seed=42)\n",
+    "gbt_pipeline=Pipeline().setStages([oheEncoder,vecAssembler,gbt])\n",
+    "gbt_Model=gbt_pipeline.fit(train)\n",
+    "gbt_predDF=gbt_Model.transform(test)\n",
+    "\n",
+    "columns=gbt_predDF.columns\n",
+    "predictResult=gbt_predDF.take(test.columns[0].count())\n",
+    "predictResult=pd.DataFrame(predictResult,columns=columns)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "103a958a-adfb-4c11-be8e-3c1e0a0aa897",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y=list(predictResult['label'])\n",
+    "y_pred=list(predictResult['prediction'])\n",
+    "y_predprob=[x[1] for x in list(predictResult['probability'])]\n",
+    "precision_score=metrics.precision_score(y, y_pred)\n",
+    "recall_score=metrics.recall_score(y, y_pred)\n",
+    "accuracy_score=metrics.accuracy_score(y, y_pred)\n",
+    "f1_score=metrics.f1_score(y, y_pred)\n",
+    "auc_score=metrics.roc_auc_score(y, y_predprob)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "a0ecf426-836b-426b-a99e-116613cf92b7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "lr_Model.save(\"s3://jqlassignment5/model_location/lr_model/\")"
+    "lr_Model.save(\"s3://jqlassignment5/model_location/gbt_Model/\")"
    ]
   },
   {
@@ -2476,13 +2519,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "spark.stop"
+    "spark.stop()"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -2496,7 +2539,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "version": "3.8.11"
   }
  },
  "nbformat": 4,
